Adjust spacing for figures and tables in ToC

--- a/tamu_thesis.cls
+++ b/tamu_thesis.cls
@@ -401,8 +401,8 @@
 }
 
 %%% ToC What to do before figure/table entires
-\renewcommand{\cftbeforefigskip}{\singleSpace}
-\renewcommand{\cftbeforetabskip}{\singleSpace}
+\renewcommand{\cftbeforefigskip}{\dimexpr\doubleSpace-\singleSpace\relax}
+\renewcommand{\cftbeforetabskip}{\dimexpr\doubleSpace-\singleSpace\relax}
 
 %%% ToC Fix some spacing
 \preto\section{                                                                 % Double space between chapter and first section
